--- a/src/main/resources/static/admin/public/locales/ru/m_agrolavka.json
+++ b/src/main/resources/static/admin/public/locales/ru/m_agrolavka.json
@@ -74,7 +74,8 @@
         "search_text": "Поиск...",
         "show_archive": "Архив",
         "contacts": "Контактные данные",
-        "comment": "Комментарий к заказу"
+        "comment": "Комментарий к заказу",
+        "adminComment": "Мой комментарий"
     },
     "backup": "Сделать резервную копию всех данных"
 }
