--- a/src/main/resources/static/admin/public/locales/en/m_agrolavka.json
+++ b/src/main/resources/static/admin/public/locales/en/m_agrolavka.json
@@ -20,7 +20,8 @@
         "product_seo_title": "SEO and site page title",
         "product_seo_description": "SEO meta description content",
         "quantity": "Quantity",
-        "available": "Available"
+        "available": "Available",
+        "discounts": "With discount"
     },
     "products_groups": {
         "new_group": "Create new product group",
