--- a/src/main/resources/static/admin/public/locales/ru/m_agrolavka.json
+++ b/src/main/resources/static/admin/public/locales/ru/m_agrolavka.json
@@ -20,7 +20,8 @@
         "product_seo_title": "Название страницы товара на сайте (SEO)",
         "product_seo_description": "Описание страницы товара на сайте (SEO)",
         "quantity": "Кол-во",
-        "available": "В наличии"
+        "available": "В наличии",
+        "discounts": "На акции"
     },
     "products_groups": {
         "new_group": "Создать новую группу товаров",
