--- a/src/main/resources/static/admin/public/locales/ru/translation.json
+++ b/src/main/resources/static/admin/public/locales/ru/translation.json
@@ -2,7 +2,7 @@
     "app_name": "Martin",
     "copyright": "Copyright",
     "vendor_site": "https://github.com/alexandr-omeluaniuk",
-    "author": "Alex Omelyaniuk",
+    "author": "Alex Amelyaniuk",
     
     "language": {
         "en": "English",
