--- a/src/main/resources/static/admin/public/locales/ru/m_agrolavka.json
+++ b/src/main/resources/static/admin/public/locales/ru/m_agrolavka.json
@@ -4,7 +4,8 @@
         "products": "Товары",
         "orders": "Заказы",
         "sandbox": "Песочница",
-        "feedbacks": "Обратная связь"
+        "feedbacks": "Обратная связь",
+        "shops": "Магазины"
     },
     "products": {
         "product_groups": "Категория товара",
@@ -80,6 +81,17 @@
         "contacts": "Контактные данные",
         "comment": "Комментарий к заказу",
         "adminComment": "Мой комментарий"
+    },
+    "shops": {
+        "shop_number": "Номер",
+        "title": "Название магазина",
+        "description": "Описание",
+        "latitude": "Широта",
+        "longitude": "Долгота",
+        "address": "Адрес",
+        "working_hours": "Время работы",
+        "main_image": "Фото магазина",
+        "images": "Дополнительные изображения"
     },
     "backup": "Сделать резервную копию всех данных"
 }
