--- a/src/main/resources/static/admin/public/locales/ru/m_agrolavka.json
+++ b/src/main/resources/static/admin/public/locales/ru/m_agrolavka.json
@@ -92,7 +92,8 @@
         "address": "Адрес",
         "working_hours": "Время работы",
         "main_image": "Фото магазина",
-        "images": "Дополнительные изображения"
+        "images": "Дополнительные изображения",
+        "phone": "Телефон"
     },
     "backup": "Сделать резервную копию всех данных"
 }
