--- a/src/main/resources/static/admin/public/locales/ru/m_agrolavka.json
+++ b/src/main/resources/static/admin/public/locales/ru/m_agrolavka.json
@@ -97,5 +97,6 @@
         "images": "Дополнительные изображения",
         "phone": "Телефон"
     },
-    "backup": "Сделать резервную копию всех данных"
+    "backup": "Сделать резервную копию всех данных",
+    "group_products_by_volumes": "Перегруппировать товары по обьему"
 }
