--- a/src/main/resources/static/admin/public/locales/ru/m_agrolavka.json
+++ b/src/main/resources/static/admin/public/locales/ru/m_agrolavka.json
@@ -5,7 +5,8 @@
         "orders": "Заказы",
         "sandbox": "Песочница",
         "feedbacks": "Обратная связь",
-        "shops": "Магазины"
+        "shops": "Магазины",
+        "slides": "Слайды"
     },
     "products": {
         "product_groups": "Категория товара",
@@ -96,6 +97,13 @@
         "main_image": "Фото магазина",
         "images": "Дополнительные изображения",
         "phone": "Телефон"
+    },
+    "slides": {
+        "name": "Название",
+        "title": "Заголовок",
+        "subtitle": "Описание",
+        "button_text": "Текст для кнопки",
+        "button_link": "Ссылка для кнопки"
     },
     "backup": "Сделать резервную копию всех данных",
     "group_products_by_volumes": "Перегруппировать товары по обьему"
