One click order

--- a/src/main/resources/static/admin/public/locales/en/m_agrolavka.json
+++ b/src/main/resources/static/admin/public/locales/en/m_agrolavka.json
@@ -75,7 +75,8 @@
             "name": "Name",
             "quantity": "Quantity",
             "price": "Price",
-            "subtotal": "Subtotal"
+            "subtotal": "Subtotal",
+            "volume": "Volume"
         },
         "close": "Close",
         "total": "Total",
