--- a/src/main/resources/static/admin/public/locales/ru/m_agrolavka.json
+++ b/src/main/resources/static/admin/public/locales/ru/m_agrolavka.json
@@ -75,7 +75,8 @@
             "name": "Наименование",
             "quantity": "Количество",
             "price": "Цена",
-            "subtotal": "Сумма"
+            "subtotal": "Сумма",
+            "volume": "Обьем"
         },
         "close": "Закрыть",
         "total": "Общая сумма",
