Video URL for product

--- a/src/main/resources/static/admin/public/locales/en/m_agrolavka.json
+++ b/src/main/resources/static/admin/public/locales/en/m_agrolavka.json
@@ -23,7 +23,8 @@
         "product_seo_description": "SEO meta description content",
         "quantity": "Quantity",
         "available": "Available",
-        "discounts": "With discount"
+        "discounts": "With discount",
+        "product_video_url": "VIdeo URL"
     },
     "products_groups": {
         "new_group": "Create new product group",
