Predefined product group

--- a/module/ui/admin/public/locales/ru/m_agrolavka.json
+++ b/module/ui/admin/public/locales/ru/m_agrolavka.json
@@ -9,7 +9,7 @@
         "slides": "Слайды"
     },
     "products": {
-        "product_groups": "Категория товара",
+        "product_groups": "Категория",
         "product_name": "Название",
         "product_price": "Отпускная цена",
         "product_buy_price": "Закупочная цена",
