Product attribute item UI

--- a/module/ui/admin/public/locales/ru/m_agrolavka.json
+++ b/module/ui/admin/public/locales/ru/m_agrolavka.json
@@ -67,7 +67,8 @@
         "number": "Номер",
         "name": "Название",
         "items": "Возможные значения",
-        "created": "Создано"
+        "created": "Создано",
+        "addItem": "Добавить значение"
     },
     "order": {
         "title": "Заказ № {{num}}",
