--- a/module/ui/admin/public/locales/en/m_agrolavka.json
+++ b/module/ui/admin/public/locales/en/m_agrolavka.json
@@ -66,7 +66,8 @@
         "number": "Nr.",
         "name": "Name",
         "items": "Items",
-        "created": "Created"
+        "created": "Created",
+        "addItem": "Add item"
     },
     "order": {
         "title": "Order # {{num}}",
