Product attribute item UI

--- a/module/ui/admin/public/locales/en/m_agrolavka.json
+++ b/module/ui/admin/public/locales/en/m_agrolavka.json
@@ -67,7 +67,9 @@
         "name": "Name",
         "items": "Items",
         "created": "Created",
-        "addItem": "Add item"
+        "addItem": "Add item",
+        "newItem": "New item",
+        "itemName": "Item name"
     },
     "order": {
         "title": "Order # {{num}}",
