--- a/module/ui/admin/public/locales/ru/m_agrolavka.json
+++ b/module/ui/admin/public/locales/ru/m_agrolavka.json
@@ -68,7 +68,9 @@
         "name": "Название",
         "items": "Возможные значения",
         "created": "Создано",
-        "addItem": "Добавить значение"
+        "addItem": "Добавить значение",
+        "newItem": "Новое значение",
+        "itemName": "Название"
     },
     "order": {
         "title": "Заказ № {{num}}",
