Product attribute item UI

--- a/module/ui/admin/public/locales/en/m_agrolavka.json
+++ b/module/ui/admin/public/locales/en/m_agrolavka.json
@@ -69,7 +69,8 @@
         "created": "Created",
         "addItem": "Add item",
         "newItem": "New item",
-        "itemName": "Item name"
+        "itemName": "Item name",
+        "editItem": "Edit item"
     },
     "order": {
         "title": "Order # {{num}}",
