--- a/module/ui/admin/public/locales/ru/m_agrolavka.json
+++ b/module/ui/admin/public/locales/ru/m_agrolavka.json
@@ -70,7 +70,8 @@
         "created": "Создано",
         "addItem": "Добавить значение",
         "newItem": "Новое значение",
-        "itemName": "Название"
+        "itemName": "Название",
+        "editItem": "Редактировать значение"
     },
     "order": {
         "title": "Заказ № {{num}}",
