--- a/module/ui/admin/public/locales/ru/m_agrolavka.json
+++ b/module/ui/admin/public/locales/ru/m_agrolavka.json
@@ -25,7 +25,8 @@
         "quantity": "Кол-во",
         "available": "В наличии",
         "discounts": "На акции",
-        "product_video_url": "Ссылка на видео"
+        "product_video_url": "Ссылка на видео",
+        "addAttributes": "Добавить аттрибуты"
     },
     "products_groups": {
         "new_group": "Создать новую группу товаров",
