--- a/module/ui/admin/public/locales/en/m_agrolavka.json
+++ b/module/ui/admin/public/locales/en/m_agrolavka.json
@@ -71,7 +71,8 @@
         "addItem": "Add item",
         "newItem": "New item",
         "itemName": "Item name",
-        "editItem": "Edit item"
+        "editItem": "Edit item",
+        "color": "Color"
     },
     "order": {
         "title": "Order # {{num}}",
