--- a/module/ui/admin/public/locales/ru/m_agrolavka.json
+++ b/module/ui/admin/public/locales/ru/m_agrolavka.json
@@ -72,7 +72,8 @@
         "addItem": "Добавить значение",
         "newItem": "Новое значение",
         "itemName": "Название",
-        "editItem": "Редактировать значение"
+        "editItem": "Редактировать значение",
+        "color": "Цвет"
     },
     "order": {
         "title": "Заказ № {{num}}",
