--- a/module/ui/admin/public/locales/en/m_agrolavka.json
+++ b/module/ui/admin/public/locales/en/m_agrolavka.json
@@ -71,6 +71,7 @@
         "addItem": "Add item",
         "newItem": "New item",
         "itemName": "Item name",
+        "itemDescription": "Description",
         "editItem": "Edit item",
         "color": "Color"
     },
