--- a/module/ui/admin/public/locales/ru/m_agrolavka.json
+++ b/module/ui/admin/public/locales/ru/m_agrolavka.json
@@ -72,6 +72,7 @@
         "addItem": "Добавить значение",
         "newItem": "Новое значение",
         "itemName": "Название",
+        "itemDescription": "Описание",
         "editItem": "Редактировать значение",
         "color": "Цвет"
     },
