--- a/module/ui/admin/public/locales/en/m_agrolavka.json
+++ b/module/ui/admin/public/locales/en/m_agrolavka.json
@@ -26,7 +26,8 @@
         "available": "Available",
         "discounts": "With discount",
         "product_video_url": "VIdeo URL",
-        "addAttributes": "Add attributes"
+        "addAttributes": "Add attributes",
+        "attributes": "Attributes"
     },
     "products_groups": {
         "new_group": "Create new product group",
