--- a/module/ui/admin/public/locales/en/m_agrolavka.json
+++ b/module/ui/admin/public/locales/en/m_agrolavka.json
@@ -7,7 +7,8 @@
         "feedbacks": "Feedbacks",
         "shops": "Shops",
         "slides": "Slides",
-        "product-attributes": "Attributes"
+        "product-attributes": "Attributes",
+        "system-settings": "System settings"
     },
     "products": {
         "product_groups": "Product groups",
