--- a/module/ui/admin/public/locales/ru/translation.json
+++ b/module/ui/admin/public/locales/ru/translation.json
@@ -81,6 +81,8 @@
         "required": "Обязательное поле",
         "email": "Неверный адрес электронной почты",
         "min_length": "Минимум {{length}} символов",
-        "max_length": "Максимум {{length}} символов"
+        "max_length": "Максимум {{length}} символов",
+        "max": "Слишком большое",
+        "min": "Слишком маленькое"
     }
 }
