--- a/module/ui/admin/public/locales/en/m_agrolavka.json
+++ b/module/ui/admin/public/locales/en/m_agrolavka.json
@@ -8,7 +8,8 @@
         "shops": "Shops",
         "slides": "Slides",
         "product-attributes": "Attributes",
-        "system-settings": "System settings"
+        "system-settings": "System settings",
+        "schedule-settings": "Schedule settings"
     },
     "products": {
         "product_groups": "Product groups",
