--- a/module/ui/admin/public/locales/ru/m_agrolavka.json
+++ b/module/ui/admin/public/locales/ru/m_agrolavka.json
@@ -8,7 +8,8 @@
         "shops": "Магазины",
         "slides": "Слайды",
         "product-attributes": "Аттрибуты",
-        "system-settings": "Системные настройки"
+        "system-settings": "Системные настройки",
+        "schedule-settings": "Расписание"
     },
     "products": {
         "product_groups": "Категория",
